# cas

./: Cargo.toml  README.md  d
examples/cas-cli/: Cargo.toml  main.rs
src/: core.rs  eval.rs  functions.rs  lib.rs  main.rs  parse.rs  simplifier.rs
src/core/: constants.rs  eval.rs  functions.rs  parse.rs
tests/: main.rs
