[package]
name = "cas"
version = "0.1.0"
authors = ["Overpeek <overpeek.fin@gmail.com>"]
edition = "2018"
exclude = ["examples/*", "tests/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
regex = "1.4.3"

[dev-dependencies]
crossterm = "0.19.0"

[workspace]
members = ["examples/*", "tests/*"]
